zerocopy-derive/tests/ui-msrv/late_compile_pass.stderr
warning: unused import: `zerocopy::KnownLayout`
  --> tests/ui-msrv/late_compile_pass.rs:16:5
   |
16 | use zerocopy::KnownLayout;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:28:10
   |
28 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:37:10
   |
37 | #[derive(FromZeros)]
   |          ^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `FromBytes1: FromZeros` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromZeros` is not implemented for `FromBytes1`
   |
note: required by a bound in `FromBytes`
  --> $WORKSPACE/src/lib.rs
   |
   | pub unsafe trait FromBytes: FromZeros {
   |                             ^^^^^^^^^ required by this bound in `FromBytes`
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:55:10
   |
55 | #[derive(IntoBytes)]
   |          ^^^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:65:10
   |
65 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:73:10
   |
73 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:80:10
   |
80 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
